# cperf

./: CMakeLists.txt  README.md  conanfile.py  justfile
.github/workflows/: benchmark.yml  build.yml  unit-tests.yml
include/: cperf.h
src/: cperf.cpp
tests/: CMakeLists.txt
tests/performance/: CMakeLists.txt  count_if_bench.cpp  factorial_bench.cpp
tests/unit/: CMakeLists.txt  cperf_test.cpp
